[gd_scene load_steps=46 format=3 uid="uid://s08uidg41e7x"]

[ext_resource type="Script" uid="uid://cuje7iupgfeyg" path="res://scenes/player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://cgkd117fchp4i" path="res://assets/pacman/pacman-lr.svg" id="2_onrkg"]
[ext_resource type="PackedScene" uid="uid://cxruft6xgpp15" path="res://scenes/bullet/bullet.tscn" id="2_sweqy"]
[ext_resource type="PackedScene" uid="uid://dn6n135ihtelb" path="res://scenes/power-up/power_up_screen.tscn" id="3_2hs0m"]
[ext_resource type="Texture2D" uid="uid://kitwsd8fuw7b" path="res://assets/pacman/pacman-ud.svg" id="3_i3pqv"]
[ext_resource type="Texture2D" uid="uid://cc7jjj5hmt3gl" path="res://assets/powerups/PacManARMA.svg" id="6_0owmy"]
[ext_resource type="Texture2D" uid="uid://cb5yxrx6bev6k" path="res://assets/powerups/PacManSPEED.svg" id="7_qek5x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_onrkg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_onrkg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_onrkg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_onrkg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_onrkg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_onrkg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_onrkg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_onrkg")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("3_i3pqv")
region = Rect2(216, 0, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("3_i3pqv")
region = Rect2(0, 27, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("3_i3pqv")
region = Rect2(27, 27, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("3_i3pqv")
region = Rect2(54, 27, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("3_i3pqv")
region = Rect2(81, 27, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("3_i3pqv")
region = Rect2(108, 27, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("3_i3pqv")
region = Rect2(135, 27, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("3_i3pqv")
region = Rect2(162, 27, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("3_i3pqv")
region = Rect2(189, 27, 27, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_nvl01"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}],
"loop": true,
"name": &"normal-right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}],
"loop": true,
"name": &"normal-up",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ivps1"]
radius = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("6_0owmy")
region = Rect2(0, 0, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("6_0owmy")
region = Rect2(27, 0, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("6_0owmy")
region = Rect2(54, 0, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("6_0owmy")
region = Rect2(81, 0, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("6_0owmy")
region = Rect2(108, 0, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("6_0owmy")
region = Rect2(135, 0, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("6_0owmy")
region = Rect2(162, 0, 27, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("6_0owmy")
region = Rect2(189, 0, 27, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_b88wv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("7_qek5x")
region = Rect2(0, 0, 40, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("7_qek5x")
region = Rect2(40, 0, 40, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("7_qek5x")
region = Rect2(80, 0, 40, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("7_qek5x")
region = Rect2(120, 0, 40, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("7_qek5x")
region = Rect2(160, 0, 40, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("7_qek5x")
region = Rect2(200, 0, 40, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("7_qek5x")
region = Rect2(240, 0, 40, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("7_qek5x")
region = Rect2(280, 0, 40, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_tw8ou"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(0.450532, 0.450532)
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_onrkg")
bullet_scene = ExtResource("2_sweqy")
level_up_scene = ExtResource("3_2hs0m")

[node name="PacmanAnimation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.9999998, 0.9999998)
sprite_frames = SubResource("SpriteFrames_nvl01")
animation = &"normal-up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ivps1")
debug_color = Color(0.81302685, 0.40991554, 7.70092e-07, 0.41960785)

[node name="up" type="RayCast2D" parent="."]
target_position = Vector2(0, -32)
hit_from_inside = true

[node name="down" type="RayCast2D" parent="."]
target_position = Vector2(0, 32)
hit_from_inside = true

[node name="left" type="RayCast2D" parent="."]
target_position = Vector2(-32, 0)
hit_from_inside = true

[node name="right" type="RayCast2D" parent="."]
target_position = Vector2(32, 0)
hit_from_inside = true

[node name="GunDecoration" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_b88wv")

[node name="SpeedDecoration" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_tw8ou")
frame_progress = 0.44500577
